# gist-summaries-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-app.sh  docker-compose.yml  start.sh  stop.sh
.github/workflows/: release.yml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/binaries/: .gitignore  download-ollama.sh  pull-model.sh
backend/icons/: icon.icns
backend/models/: .gitignore
backend/src/: main.rs
backend/src/github/: mod.rs
backend/src/llm/: mod.rs
backend/src/ollama/: mod.rs
front-end/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front-end/src/: App.svelte  main.ts
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/github/: mod.rs
src-tauri/src/llm/: mod.rs
src/github/: mod.rs
src/llm/: mod.rs
