[package]
name = "gist-summary"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
langchain-rust = "4.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

