[package]
name = "gist-summary"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
langchain-rust = "4.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

